# TexGAE

./: .gitignore  CMakeLists.txt  README.md
Source/: EngineApp.cpp  EngineApp.h  EngineConfig.h  EventMappingManager.cpp  EventMappingManager.h  Ids.h  MainComponent.cpp  MainComponent.h  OscRouter.cpp  OscRouter.h  ScServerClient.cpp  ScServerClient.h  SceneManager.cpp  SceneManager.h  Scheduler.cpp  Scheduler.h  VoiceManager.cpp  VoiceManager.h  main.cpp
SuperCollider/: CompileDefs.scd  EngineLib.scd  simple.scd
SuperCollider/defs/: additive_pad.scsyndef  alarm_loop.scsyndef  ambience_grain.scsyndef  boing_spring.scsyndef  bouncing_ball.scsyndef  bow_release.scsyndef  bubbles_loop.scsyndef  car_passby.scsyndef  coin_pickup.scsyndef  creaking_door.scsyndef  door_thud.scsyndef  dtmf_tone.scsyndef  electricity_arc.scsyndef  engine_idle.scsyndef  error_buzz.scsyndef  explosion.scsyndef  fire_loop.scsyndef  footstep.scsyndef  gunshot.scsyndef  impact.scsyndef  insects_loop.scsyndef  jump_blip.scsyndef  laser_zap.scsyndef  magic_cast.scsyndef  motor_loop.scsyndef  music_pulse.scsyndef  pedestrians_loop.scsyndef  phone_tone.scsyndef  pickup_chime.scsyndef  powerup_swirl.scsyndef  proc_hit.scsyndef  r2d2_bleeps.scsyndef  rain_loop.scsyndef  red_alert_loop.scsyndef  reload_click.scsyndef  ricochet_ping.scsyndef  rifle_shot.scsyndef  rocket_launcher_blast.scsyndef  rolling_can.scsyndef  running_water.scsyndef  (+11 more)
config/: engine_contract.md
examples/godot/: GameAudioClient.gd  README.md
examples/unity/: GameAudioClient.cs  README.md
scripts/: compile_defs.sh
